<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAB7AF"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/iv_th"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/th_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/did_you_know_you_can_determine"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="242dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/th2"
        />

    <EditText
        android:id="@+id/et_temp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_temperature_in_f"
        android:inputType="number"
        android:shadowColor="#121010"
        android:textColor="@color/th2" />

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@color/th2"
        android:text="@string/button"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:gravity="center_horizontal"
        android:hint="@string/conversion_result_will_show_here"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/th2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_histo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:text="@string/history_n"
        android:background="@drawable/histo_border"
        android:padding="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</LinearLayout>